[WIP] Github authorization
